# rpg_mpc

./: .gitignore  CMakeLists.txt
include/rpg_mpc/: mpc_controller.h  mpc_params.h  mpc_wrapper.h
model/: CMakeLists.txt  quadrotor_model_codegen  quadrotor_model_thrustrates.cpp
model/quadrotor_mpc_codegen/: acado_common.h  acado_integrator.c  acado_solver.c
src/: autopilot_mpc_instance.cpp  mpc_controller.cpp  mpc_wrapper.cpp
test/: mpc_node.cpp
